# ap

./: .gitignore  README.md  pyproject.toml
proj/model/shortUnit3457RF250/: fingerprint.pb  keras_metadata.pb  saved_model.pb
proj/model/shortUnit3457RF250/assets/: 96ea0dad71ae4f90data_spec.pb  96ea0dad71ae4f90nodes-00000-of-00001  96ea0dad71ae4f90random_forest_header.pb
proj/model/shortUnit3457RF250/variables/: variables.data-00000-of-00001  variables.index
proj/src/: __main__.py  adaboost.py  app.py  playground.py  preprocessing.py  random_forest.py  util.py  xgboost.py
tp1/: spec.txt
tp1/report/: report.tex
tp1/src/: app.py  model.py  util.py
tp2/: .nvim.lua  sample.csv
tp2/data/: tic-tac-toe.data
tp2/report/: report.tex
tp2/src/: app.py  dataset.py  test_app.py  test_dataset.py  test_util.py  util.py
