[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Igor <igorlfs@ufmg.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow = "^2.12.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
pycairo = "^1.23.0"
pygobject = "^3.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
