[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Igor <igorlfs@ufmg.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow = "^2.12.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
pycairo = "^1.23.0"
pygobject = "^3.44.1"
pytest = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501", "PD901"]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "ICN",
    "PD",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
]
