[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Igor <igorlfs@ufmg.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow = "^2.12.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
pycairo = "^1.23.0"
pygobject = "^3.44.1"
pytest = "^7.3.2"
scikit-learn = "^1.2.2"
tensorflow-decision-forests = "^1.3.0"
tensorflow-addons = "^0.20.0"
xgboost = "^1.7.6"
graphviz = "^0.20.1"
pydot = "^1.4.2"


[tool.black]
line-length = 90

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501", "PD901"]
select = [
    "F",
    "E",
    "W",
    "C90",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "ICN",
    "PD",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
]
